# UnifiedAIToolbox

./: .dockerignore  .editorconfig  .env.example  .env.phase3.example  .gitignore  .hintrc  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CLEANUP_EXECUTION_SUMMARY.md  CLEANUP_HISTORY.md  CLEANUP_PLAN_2025-12.md  CLEANUP_QUICK_REFERENCE.md  CLEANUP_SUMMARY.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_READINESS.md  FOLDER_STRUCTURE.md  GithubCodexOrchestration.prompt.yml  IMPLEMENTATION.md  IMPLEMENTATION_ALERTING_CLI_TEMPLATE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TELEMETRY_AI_TEMPLATE.md  LAUNCH_GUIDE.md  LAUNCH_READINESS_REPORT.md  Launch-Demo.ps1  Launch-Portal.bat  Launch-Toolbox.bat  Launch.ps1  LaunchUnifiedDashboard.bat  LaunchUnifiedToolbox.ps1  MCP_IMPLEMENTATION_SUMMARY.md  MCP_LIBRARY_STATUS.md  MCP_REMAINING_TASKS.md  MIGRATION.md  MILESTONE_1.5_COMPLETION_REPORT.md  MILESTONE_SUMMARY.md  ORCHESTRATION_CONNECTION_IMPLEMENTATION.md  (+50 more)
.claude/: launch.json  settings.json  settings.local.json
.codex_out/: codex_swarm_20251113_064639.json
.github/: pull_request_template.md
.playwright-cli/: page-2026-05-04T04-22-51-034Z.yml  page-2026-05-04T04-23-19-746Z.yml  page-2026-05-04T04-24-31-613Z.yml  page-2026-05-04T04-24-50-366Z.yml  page-2026-05-04T04-25-29-278Z.yml
Demo/: demo-animated.html  demo-animated_UPDATED.html
Orchestration/: $list = @(1, 2, 3, 4, 5).ps1  .gitignore  AGENTS_SOT.md  AI-Orchestration.code-workspace  AdvancedImageAnalysis.ps1  Agent_Workbook.md  Invoke-AgentsSdkOrchestration.ps1  MilestoneController.ps1  README.md  Sample_AI_Q&A.txt  desktop.ini  orchestration_pipeline.prompt.yml
Orchestration/UnifiedPromptApp/services/prompt-api/: MilestoneController.ps1  README.md  Start-PromptWorkbench.ps1  app.py  app.py.backup  app.py.new  auth.py  cost_tracker.py  github_api.py  migrations.py  prompt_registry.py  pyproject.toml  requirements.txt  streamlit_app.py  webhook_handler.py  workbench.db
Orchestration/UnifiedPromptApp/services/prompt-api/.venv-linux/: pyvenv.cfg
Orchestration/UnifiedPromptApp/services/prompt-api/data/: prompt-library.json
Orchestration/UnifiedPromptApp/services/prompt-api/docs/: openapi.json
Orchestration/UnifiedPromptApp/services/prompt-api/scripts/: export_openapi.py
Orchestration/UnifiedPromptApp/services/prompt-api/templates/: volume_anomaly_summary_v1.0.0.yaml  volume_anomaly_summary_v2.0.0.yaml  volume_anomaly_summary_v2.0.0.yaml.fixed  volume_anomaly_summary_v2.0.0_test.yaml
Orchestration/UnifiedPromptApp/services/prompt-api/tests/: test_cost_tracker.py  test_github_api.py  test_prompts.py
agents/: repo_context_builder.agent.json  repo_provenance_reader.agent.json
archive/: ARCHIVE_MANIFEST.md  README.md
codex-multiagent-swarm/: Orchestrate-Codex.ps1
codex_out/: codex_swarm_20251113_064743.json
config/: costs.example.json  run-observatory.example.json
contracts/: build_app_contract.v1.json  build_app_request.v1.json  common_run_contract.v1.json  failure_treatment_policy.v1.json  maintenance_contract.v1.json  maintenance_request.v1.json  repo_context_schema.v1.json
docs/: ACCEPTANCE_CHECKLIST.md  ALERTING_SYSTEM.md  APP_FACTORY_AUDIT_2026-02-07.md  APP_FACTORY_GITHUB_INTEGRATION.md  APP_FACTORY_HARDENING.md  ARCHITECTURE_FACTS_SUMMARY.md  Add an Artifact Normalizer + Verifier st.md  App Lifecycle Console ROADMAP.md  CLEANUP_HISTORY.md  CONCEPTUAL_MODEL_CONTRACT.md  CONTRIBUTING.md  COST_ANALYTICS_IMPLEMENTATION.md  Concierge_MajorVersion_UpgradePromptChain.md  DEMO.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_CONSOLIDATION.md  EVALUATING_A_RUN.md  FINAL_PRODUCT_SUMMARY.md  GITHUB_AUTOMATION.md  GITHUB_INTEGRATION.md  GITHUB_INTEGRATION_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  IdealPromptforCryptoCurrencyMonitor.md  MCPLibraryFeature_PromptChain.md  MCP_GOVERNANCE_DESIGN.md  MCP_GOVERNANCE_SEQUENCE_DIAGRAM.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_LIBRARY_IMPLEMENTATION_SUMMARY.md  MCP_LIBRARY_STATUS.md  MCP_REGISTRY_INGESTION.md  MCP_REMAINING_TASKS.md  MIGRATION.md  NEXT_STEPS.MD  NEXT_STEP_SUMMARY.md  ORCHESTRATION_RUN_TRACKING.md  ORCHESTRATOR_ENHANCEMENTS.md  ORCHESTRATOR_LOGGING.md  ORCHESTRATOR_STATUS.md  (+63 more)
examples/: New-RefinedPrompt-Example.ps1  Phi Playground.prompt
examples/ui-auto-validate-2026-02-07T23-08-23-907Z-5cc97e/repo/: ARTIFACT_INGEST_REPORT.md  ASSEMBLY_REPORT.md  CHANGELOG.md  GATE_REPORT.md  NORMALIZATION_REPORT.md  PATCHLOG.md  README.md  REPO_CONTRACT.json  RUN_DIAGNOSTICS.md  artifact_tree.txt  package.json  pyproject.toml  run_config_snapshot.json  run_state_snapshot.json
examples/ui-auto-validate-2026-02-07T23-08-23-907Z-5cc97e/repo/.appfactory/: metadata.json
examples/ui-auto-validate-2026-02-07T23-08-23-907Z-5cc97e/repo/docs/: FINAL_AUDIT.md  QA_REVIEW.md
examples/ui-auto-validate-2026-02-07T23-08-23-907Z-5cc97e/repo/patches/: cycle-1.patch  cycle-2.patch
examples/ui-auto-validate-2026-02-07T23-08-23-907Z-5cc97e/repo/src/app/: page.tsx
examples/ui-auto-validate-2026-02-07T23-08-23-907Z-5cc97e/repo/src/phi_explorer/: __init__.py  __main__.py  app.py  phi_math.py  references.py  ui.py  viz_spiral.py
examples/ui-auto-validate-2026-02-07T23-08-23-907Z-5cc97e/repo/tests/: test_phi_math.py
logs/: orchestration-summary.json  raw_llm_response_20251211_034854.json
modules/: Orchestration.Common.psm1  PromptIntegration.psd1  PromptIntegration.psm1
pipelines/: pipeline_build_app.v1.json  pipeline_maintenance.v1.json
project files/: Ai Orchestrator – Readme + Architecture + Delivery Checklist.docx  Code Orchestration Tool (Agents Definitions).txt  ai_orchestrator_readme_architecture_delivery_checklist (1).md  ~$ Orchestrator.docx
prompts/: GithubCodexOrchestration.prompt.yml  README.md  agent-library.active.json  agent-library.active2.json  changelog.md
runs/: client_secret_865636458145-tdt8retht9sdkot23gtm44028fl9e4qi.apps.googleusercontent.com.json
scripts/: Approve-PromptCandidate.ps1  Build-Index.ps1  Clone-WslRepo.ps1  Collect-BuildArtifacts.ps1  README.md  (+22 more)
(+2523 files in other folders)
