[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-api"
version = "0.1.0"
description = "FastAPI service that fronts the Unified Prompt Registry."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.3.0",
    "requests>=2.32.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
py-modules = [
    "app",
    "auth",
    "cost_tracker",
    "github_api",
    "prompt_registry",
    "streamlit_app",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
